# soft-ieee754

./: CMakeLists.txt  LICENSE  README.md
includes/: ieee754.hpp  numeric_limits.hpp  smallest_unsigned.hpp  std_overrides.hpp
operations/: conversionieee754.c  conversionieee754.py
tests/: CMakeLists.txt  inf.cpp  test-utils.h
